LoginFormMGET : ajout classe de séparation de champs de formulaire OEDInput : prise en compte des classes affectées à l'objet

--- a/view/zf3-graphic-object-templating/oeobjects/oedcontained/oedinput/oedinput.twig
+++ b/view/zf3-graphic-object-templating/oeobjects/oedcontained/oedinput/oedinput.twig
@@ -1,6 +1,6 @@
 {# template de l'objet OEDInput #}
 
-{% set objClass = "gotObject "~gotBootstrap(objet.widthBT) %}
+{% set objClass = "gotObject "~gotBootstrap(objet.widthBT)~' '~objet.classes %}
 {% set labelClass = "" %}
 {% set inputClass = "" %}
 
