Correction pour mise en phase avec la nouvelle gestion de la création des objets layout.twig : ajout de la référence au layout aprent pour cause de manque de fichier Js et CSS nécessaire

--- a/view/metro-ui-get/layout/layout.twig
+++ b/view/metro-ui-get/layout/layout.twig
@@ -1,6 +1,7 @@
 {% extends 'layout/layout' %}
 
 {% block Hstyle %}
+    {{ parent() }}
     <link href="{{ basePath('gotextension/metroui/css/metro-responsive.css') }}" media="screen" rel="stylesheet" type="text/css">
     <link href="{{ basePath('gotextension/metroui/css/metro-icons.css') }}" media="screen" rel="stylesheet" type="text/css">
     <link href="{{ basePath('gotextension/metroui/css/metro.css') }}" media="screen" rel="stylesheet" type="text/css">
@@ -12,6 +13,7 @@
 {% endblock Hstyle %}
 
 {% block Hscript %}
+    {{ parent() }}
     <script type="text/javascript" src="{{ basePath('gotextension/metroui/js/metro.js') }}"></script>
     {% block metrouiScript %}{% endblock metrouiScript %}
 {% endblock Hscript %}
